Change wiki requests to use Java 9 HttpClient (#634)
* refactor: move wiki calls to HttpClient

* tests: allow forbidding network access

* fix: issues with checkPlurals

* chore: fmt